--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,17 @@ body * {
 }
 
 body {
-  background-color: #cdcadf;
+  background-color: grey;
+}
+
+.background {
+  background-image: url(../img/background1.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+ 
+ 
 }
 
 .container {
