--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@ nav > a.active {
 main.container {
   height: calc(100vh - 120px);
   position: relative;
-  background-image: url(../img/shoes1.png);
+  background-image: url(../img/shoes1-4.png);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: right center;
@@ -158,15 +158,52 @@ main.container {
   justify-content: space-between;
   color: #f00;
 }
-.pagination > .bar {
+/*.pagination > .bar {
   display: inline-block;
   width: 100%;
   height: 5px;
   background-color: #f006;
 }
+*/
+
 .pagination > .bar > .value {
   display: inline-block;
   width: 25%;
   height: 100%;
   background-color: #f00;
+}
+
+.sliderbar {
+  float: left;
+  width: 100%;
+  height: 4px;
+  background-color: lightgrey;
+  position: absolute;
+  bottom: 0px;;
+}
+
+.slider {
+    display:inline-block;
+    Height: 5px;
+    width: calc(100%/3);
+    float: left;
+}
+
+.slider:hover {
+  background-color: grey; 
+}
+
+.slider-active {
+  display:inline-block;
+  Height: 5px;
+  width: calc(100%/3);
+  float: left;
+  background-color: red;
+}
+
+.link {
+    display: block;
+    float: left;
+    width: 100%;
+    height: 5px;
 }
