--- a/css/main.css
+++ b/css/main.css
@@ -166,31 +166,33 @@ main.container {
 }
 */
 
-.pagination > .bar > .value {
+/*.pagination > .bar > .value {
   display: inline-block;
   width: 25%;
   height: 100%;
   background-color: #f00;
 }
-
+*/
 .sliderbar {
   float: left;
   width: 100%;
   height: 4px;
-  background-color: lightgrey;
+  background-color: grey;
   position: absolute;
-  bottom: 0px;;
+  bottom: 0px;
+  top: 25px;
 }
 
-.slider {
+.slider-static {
     display:inline-block;
     Height: 5px;
     width: calc(100%/3);
     float: left;
+    background-color: grey;
 }
 
-.slider:hover {
-  background-color: grey; 
+.slider-active:hover {
+  background-color: red; 
 }
 
 .slider-active {
@@ -207,3 +209,4 @@ main.container {
     width: 100%;
     height: 5px;
 }
+ 
