--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
+  /*height: 100vh;*/
 
 }
 
@@ -155,7 +155,7 @@ main.container {
   bottom: 0;
   left: 0;
   width: 200px;
-  top: 670px;
+  top: 870px;
 }
 .pagination > .top {
   display: flex;
