--- a/css/shoes3.css
+++ b/css/shoes3.css
@@ -1,9 +1,13 @@
 main.container {
     height: calc(100vh - 120px);
     position: relative;
-    background-image: url(../img/shoes3.png);
+    background-image: url(../img/shoes1-6.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: right center;
 
+  }
+
+  .about > .price {
+    color: #fff;
   }
